# serene-metaheuristics

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/cflp/: optima.json
data/raw/tsplib/: optima.json
results/tables/cflp_context_diagnostic/: lookahead_regret_by_horizon.csv  regret_by_featureset.csv
results/tables/cflp_full_ablations/: gap_by_budget_fraction.csv  ranks.csv  results.csv  vs_full.csv
results/tables/cflp_full_ablations_large/: gap_by_budget_fraction.csv  ranks.csv  results.csv  vs_full.csv
results/tables/cflp_main/: gap_by_budget_fraction.csv  ranks.csv  results.csv  within_host_efficiency.csv
results/tables/cflp_main_large/: gap_by_budget_fraction.csv  ranks.csv  results.csv  within_host_efficiency.csv
results/tables/cflp_main_medium/: gap_by_budget_fraction.csv  ranks.csv  results.csv  within_host_efficiency.csv
results/tables/cflp_main_small/: gap_by_budget_fraction.csv  ranks.csv  results.csv  within_host_efficiency.csv
results/tables/cflp_medium/: gap_by_budget_fraction.csv  ranks.csv  results.csv  within_host_efficiency.csv
results/tables/cflp_medium_ablations/: gap_by_budget_fraction.csv  ranks.csv  results.csv  vs_full.csv
scripts/: context_diagnostic.py  lookahead_diagnostic.py  run_ablations.py  run_cflp_ablations.py  run_cflp_study.py  run_context_sa_tabu.py  run_greedy_baseline.py  run_lgbm_context_ablation.py  run_lgbm_gating.py  run_tsp_study.py  slice_cflp_tier.py
src/serene_mh/: __init__.py
tests/: test_benchmarks.py  test_cflp.py  test_controller.py  test_experiments.py  test_smoke.py  test_tsp.py
(+55 files in other folders)
